# McCad-Salome-Source

./: CMakeLists.txt  MCCAD_version.h  MCCAD_version.h.in  MCCAD_version.h~  README.md  SalomeMCCADConfig.cmake.in
idl/: CMakeLists.txt  MCCAD.idl
resources/: CMakeLists.txt  MCCADCatalog.xml.in  SalomeApp.xml  SalomeApp.xml.in
src/MCCAD/: CMakeLists.txt  McCad.template
src/MCCAD/McCadAEV/: McCadAEV_Application.cxx  McCadAEV_Editor.cxx  McCadAEV_ListIteratorOfListOfEditorPtr_0.cxx  McCadAEV_ListIteratorOfListOfEditor_0.cxx  McCadAEV_ListIteratorOfListOfViewerPtr_0.cxx  McCadAEV_ListIteratorOfListOfViewer_0.cxx  McCadAEV_ListNodeOfListOfEditorPtr_0.cxx  McCadAEV_ListNodeOfListOfEditor_0.cxx  McCadAEV_ListNodeOfListOfViewerPtr_0.cxx  McCadAEV_ListNodeOfListOfViewer_0.cxx  McCadAEV_ListOfEditorPtr_0.cxx  McCadAEV_ListOfEditor_0.cxx  McCadAEV_ListOfViewerPtr_0.cxx  McCadAEV_ListOfViewer_0.cxx  McCadAEV_SequenceNodeOfSequenceOfEditorPtr_0.cxx  McCadAEV_SequenceNodeOfSequenceOfEditor_0.cxx  McCadAEV_SequenceNodeOfSequenceOfViewerPtr_0.cxx  McCadAEV_SequenceNodeOfSequenceOfViewer_0.cxx  McCadAEV_SequenceOfEditorPtr_0.cxx  McCadAEV_SequenceOfEditor_0.cxx  McCadAEV_SequenceOfViewerPtr_0.cxx  McCadAEV_SequenceOfViewer_0.cxx  McCadAEV_Viewer.cxx
src/MCCAD/McCadBoolExp/: McCadBoolExp_ExprParser.cxx  McCadBoolExp_PostFixer.cxx
src/MCCAD/McCadCSGAdapt/: McCadCSGAdapt_FaceAnalyser.cxx  McCadCSGAdapt_ShapeAnalyser.cxx  McCadCSGAdapt_ShapeGeomAnalyser.cxx  McCadCSGAdapt_ShellAnalyser.cxx  McCadCSGAdapt_SolidAnalyser.cxx
src/MCCAD/McCadCSGBuild/: McCadCSGBuild_SolidFromCSG.cxx  tt.cxx
src/MCCAD/McCadCSGGeom/: McCadCSGGeom_Cell.cxx  McCadCSGGeom_Cone.cxx  McCadCSGGeom_Cylinder.cxx  McCadCSGGeom_DataMapIteratorOfDataMapOfIntegerCell_0.cxx  McCadCSGGeom_DataMapIteratorOfDataMapOfIntegerSurface_0.cxx  McCadCSGGeom_DataMapIteratorOfDataMapOfIntegerTransformation_0.cxx  McCadCSGGeom_DataMapNodeOfDataMapOfIntegerCell_0.cxx  McCadCSGGeom_DataMapNodeOfDataMapOfIntegerSurface_0.cxx  McCadCSGGeom_DataMapNodeOfDataMapOfIntegerTransformation_0.cxx  McCadCSGGeom_DataMapOfIntegerCell_0.cxx  McCadCSGGeom_DataMapOfIntegerSurface_0.cxx  McCadCSGGeom_DataMapOfIntegerTransformation_0.cxx  McCadCSGGeom_GQ.cxx  McCadCSGGeom_HSequenceOfCell_0.cxx  McCadCSGGeom_HSequenceOfSurface_0.cxx  McCadCSGGeom_HSequenceOfTransformation_0.cxx  McCadCSGGeom_Plane.cxx  McCadCSGGeom_SequenceNodeOfSequenceOfCell_0.cxx  McCadCSGGeom_SequenceNodeOfSequenceOfSurface_0.cxx  McCadCSGGeom_SequenceNodeOfSequenceOfTransformation_0.cxx  McCadCSGGeom_SequenceOfCell_0.cxx  McCadCSGGeom_SequenceOfSurface_0.cxx  McCadCSGGeom_SequenceOfTransformation_0.cxx  McCadCSGGeom_Sphere.cxx  McCadCSGGeom_Surface.cxx  McCadCSGGeom_SurfaceOfRevolution.cxx  McCadCSGGeom_Torus.cxx  McCadCSGGeom_Transformation.cxx
src/MCCAD/McCadCSGTool/: McCadCSGTool.cxx  McCadCSGTool_CellBuilder.cxx  McCadCSGTool_Cutter.cxx  McCadCSGTool_Decomposer.cxx  McCadCSGTool_Extender.cxx  McCadCSGTool_FaceFuser.cxx  McCadCSGTool_SignCheck.cxx  McCadCSGTool_SurfaceChecker.cxx  McCadCSGTool_TrivialCheck.cxx
src/MCCAD/McCadCSGUtil/: McCadCSGUtil_SolidBuilder.cxx
src/MCCAD/McCadCom/: McCadCom_CasDocument.cxx  McCadCom_CasView.cxx  McCadCom_DataMapIteratorOfDataMapofIntegerListOfCasView_0.cxx  McCadCom_DataMapIteratorOfDataMapofIntegerListOfDocument_0.cxx  McCadCom_DataMapIteratorOfDataMapofIntegerListOfView_0.cxx  McCadCom_DataMapNodeOfDataMapofIntegerListOfCasView_0.cxx  McCadCom_DataMapNodeOfDataMapofIntegerListOfDocument_0.cxx  McCadCom_DataMapNodeOfDataMapofIntegerListOfView_0.cxx  McCadCom_DataMapofIntegerListOfCasView_0.cxx  McCadCom_DataMapofIntegerListOfDocument_0.cxx  McCadCom_DataMapofIntegerListOfView_0.cxx  McCadCom_Document.cxx  McCadCom_ListIteratorOfListOfCasView_0.cxx  McCadCom_ListIteratorOfListOfDocument_0.cxx  McCadCom_ListIteratorOfListOfView_0.cxx  McCadCom_ListNodeOfListOfCasView_0.cxx  McCadCom_ListNodeOfListOfDocument_0.cxx  McCadCom_ListNodeOfListOfView_0.cxx  McCadCom_ListOfCasView_0.cxx  McCadCom_ListOfDocument_0.cxx  McCadCom_ListOfView_0.cxx  McCadCom_MapIteratorOfMapOfCasView_0.cxx  McCadCom_MapIteratorOfMapOfDocument_0.cxx  McCadCom_MapIteratorOfMapOfView_0.cxx  McCadCom_MapOfCasView_0.cxx  McCadCom_MapOfDocument_0.cxx  McCadCom_MapOfView_0.cxx  McCadCom_SequenceNodeOfSequenceOfCasView_0.cxx  McCadCom_SequenceNodeOfSequenceOfDocument_0.cxx  McCadCom_SequenceNodeOfSequenceOfView_0.cxx  McCadCom_SequenceOfCasView_0.cxx  McCadCom_SequenceOfDocument_0.cxx  McCadCom_SequenceOfView_0.cxx  McCadCom_StdMapNodeOfMapOfCasView_0.cxx  McCadCom_StdMapNodeOfMapOfDocument_0.cxx  McCadCom_StdMapNodeOfMapOfView_0.cxx  McCadCom_View.cxx
src/MCCAD/McCadConvertTools/: McCadConvertTools_Convertor.cxx  McCadConvertTools_VoidGenerator.cxx
src/MCCAD/McCadDecompose/: McCadAstSurfPlane.cxx  McCadAstSurfPlane.hxx  McCadAstSurface.cxx  McCadAstSurface.hxx  McCadBndSurfCylinder.cxx  McCadBndSurfCylinder.hxx  McCadBndSurfPlane.cxx  McCadBndSurfPlane.hxx  McCadBndSurface.cxx  McCadBndSurface.hxx  McCadDcompGeomData.cxx  (+28 more)
src/MCCADGEN/: CMakeLists.txt  MCCAD.cxx  MCCAD.hxx  MCMESHTRAN_AbaqusMeshWriter.cxx  MCMESHTRAN_AbaqusMeshWriter.hxx  Makefile.am
src/MCCADGUI/: CMakeLists.txt  Handle_MCCAD_AISShape.hxx  ImportObjDialog.ui  MCCADGUI.cxx  MCCADGUI.h  MCCADGUI_DataModel.cxx  MCCADGUI_DataModel.h  MCCADGUI_DataObject.cxx  MCCADGUI_DataObject.h  MCCADGUI_Dialogs.cxx  MCCADGUI_Dialogs.h  MCCADGUI_Dialogs_moc.cxx  MCCADGUI_Displayer.cxx  MCCADGUI_Displayer.h  MCCADGUI_Operation.cxx  MCCADGUI_Operation.h  MCCADGUI_OperationImpl.cxx  MCCADGUI_OperationImpl.h  MCCADGUI_Operation_moc.cxx  MCCADGUI_Selection.cxx  MCCADGUI_Selection.h  MCCADGUI_moc.cxx  MCCAD_AISShape.cxx  MCCAD_AISShape.hxx  MCCAD_AISShape.ixx  MCCAD_AISShape.jxx  MCCAD_Constants.cxx  MCCAD_Constants.h  MCCAD_icons.qm  MCCAD_msg_en.qm  MCMESHTRAN_AbaqusMeshReader.cxx  MCMESHTRAN_AbaqusMeshReader.hxx  MCardDialog.ui  S_McCadGDMLWriter.cxx  S_McCadGDMLWriter.hxx  S_McCadGeomData.cxx  S_McCadGeomData.hxx  S_McCadMcnpWriter.cxx  S_McCadMcnpWriter.hxx  S_McCadSolid.cxx  (+12 more)
src/TETGEN/: CMakeLists.txt  README  tetgen.h
(+1095 files in other folders)
